crates/weft-snapshots/tests/snapshots/a2ui/example-button.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-button as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "pay"
          ],
          "accessibility": {
            "label": "Checkout"
          }
        },
        {
          "id": "pay",
          "component": "Button",
          "child": "pay-label",
          "variant": "primary",
          "action": {
            "event": {
              "name": "order.pay"
            }
          },
          "checks": [
            {
              "condition": {
                "call": "required",
                "args": {
                  "value": {
                    "path": "/cartReady"
                  }
                }
              },
              "message": "Not available"
            }
          ]
        },
        {
          "id": "pay-label",
          "component": "Text",
          "text": "Pay now"
        }
      ]
    }
  }
]
