crates/weft-snapshots/tests/snapshots/a2ui/example-checkbox.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-checkbox as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "terms"
          ],
          "accessibility": {
            "label": "Terms"
          }
        },
        {
          "id": "terms",
          "component": "CheckBox",
          "label": "I accept the terms",
          "value": {
            "path": "/acceptTerms"
          }
        }
      ]
    }
  }
]
