crates/weft-snapshots/tests/snapshots/a2ui/example-combobox.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: example-combobox as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "root",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "root",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "city"
          ],
          "accessibility": {
            "label": "Shipping"
          }
        },
        {
          "id": "city",
          "component": "ChoicePicker",
          "variant": "mutuallyExclusive",
          "options": [
            {
              "label": "Portugal",
              "value": "Lisbon"
            },
            {
              "label": "Spain",
              "value": "Madrid"
            }
          ],
          "value": {
            "path": "/city"
          },
          "label": "City",
          "filterable": true
        }
      ]
    }
  }
]
